--- a/package.json
+++ b/package.json
@@ -23,17 +23,18 @@
     "sdk"
   ],
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^22.7.9",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
-    "@types/jest": "^29.5.12"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   },
   "dependencies": {
     "@ckb-ccc/core": "^0.1.0-alpha.4",
     "@ckb-lumos/base": "^0.23.0",
     "@ckb-lumos/codec": "^0.23.0",
+    "adler-32": "^1.3.1",
     "hash-wasm": "^4.11.0"
   }
 }
