--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "example": "ts-node examples/index.ts",
     "example:publish": "ts-node examples/publish.ts",
     "example:append": "ts-node examples/append.ts",
-    "example:retrieve": "ts-node examples/retrieve.ts"
+    "example:retrieve": "ts-node examples/retrieve.ts",
+    "example:witness-decode-demo": "ts-node examples/witness-decode-demo.ts"
   },
   "keywords": [
     "ckb",
