--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ckbfs/api",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "SDK for CKBFS protocol on CKB",
   "license": "MIT",
   "author": "Code Monad<code@lab-11.org>",
@@ -29,6 +29,7 @@
     "sdk"
   ],
   "devDependencies": {
+    "@ckb-ccc/spore": "^1.5.5",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.7.9",
     "jest": "^29.7.0",
